grammar.ebnf
//TOKENS
literals = '+-*/()[],.;:<>"'
FLOAT = r'(\+|-)?([0]|[1-9][0-9]*)(\.[0-9]+((e|E)(\+|-)?[0-9]+)?|(e|E)(\+|-)?[0-9]+)'
INT = r'((\+|-)?[1-9][0-9]*)|[0]'
LITERAL = r'"([^"]*)"'
MEI    =r'<='
MAI    =r'>='
II     =r'=='
DI     =r'!='
WHILE = r'[Ww][Hh][Ii][Ll][Ee]\b'
ASIG   =r':='
NOT    =r'[Nn][oO][Tt]\b'
FUN    = r'[Ff][uU][Nn]\b'
READ   = r'[rR][eE][aA][dD]\b' 
WRITE   = r'[wW][rR][iI][Tt][eE]\b'
PRINT  = r'[Pp][Rr][Ii][Nn][Tt]\b'
DO   = r'[Dd][Oo]\b'
IF     = r'[iI][fF]\b'
THEN   = r'[Tt][Hh][Ee][Nn]\b'
ELSE =r'[Ee][Ll][Ss][Ee]\b'
END    = r'[Ee][Nn][Dd]\b'
BREAK  = r'[Bb][Rr][Ee][Aa][Kk]\b'
RETURN = r'[Rr][Ee][Tt][uU][rR][nN]\b'
SKIP= r'[sS][Kk][iI][pP]\b'
BEGIN    = r'[Bb][Ee][Gg][Ii][Nn]\b'
AND    = r'[Aa][Nn][Dd]\b'
OR    = r'[Oo][Rr]\b'
FLOAT_T  = r'[Ff][Ll][Oo][Aa][Tt]\b'
INT_T = r'[iI][Nn][tT]\b'
NAME = r'[a-zA-Z]+[0-9]*[a-zA-Z]*'

//CFG

program ::= function

function ::= 'FUN' name '(' arglist? ')' locals 'BEGIN' statements 'END'

statements ::= statement (';' statement)*

statement ::= 'WHILE' relation 'DO' statement
             |'IF' relation 'THEN' statement ('ELSE' statement)?
             |location ':=' expr
             |'PRINT' '(' literal ')'
             |'WRITE' '(' expr ')'
             |'READ' '(' location ')'
             |'RETURN' expr
             | name '(' exprlist ')'
             | 'SKIP' 
             | 'BREAK' 
             | 'BEGIN' statements 'END'

expr ::= expr '+' expr
        |expr '-' expr
        |expr '*' expr
        |expr '/' expr
        |'-' expr
        |'+' expr
        |'(' expr ')'
        |name '(' exprlist ')'
        |name
        |name '[' int ']'
        |num
        |('INT' | 'FLOAT') '(' expr ')'
        
exprlist ::= expr (',' expr)+

relation ::= expr ('<'|'<='|'>'|'>='|'=='|'!='|) expr 
            | relation ('AND'|'OR') relation 
            | 'NOT' relation 
            | '(' relation ')'

arg ::= name ':' ('INT' | 'FLOAT' | 'INT' '[' int ']')

arglist ::= arg (',' arg)*

locals ::= (arg ';' | function ';')*

location ::= name | name '[' int ']'

num ::= int | float

int ::= ((\+|-)?[1-9][0-9]*)|[0]

float ::= (\+|-)?([0]|[1-9][0-9]*)(\.[0-9]+((e|E)(\+|-)?[0-9]+)?|(e|E)(\+|-)?[0-9]+)

array ::= 'INT' '[' int ']' | 'FLOAT' '[' float ']'

name ::= [a-zA-Z_]+[0-9-a-zA-Z_]*

literal ::= "([^"]*)"
